Fix feedback icon color: always black, not white in dark mode

--- a/src/app/components/question/answer/shared-option-component/option-item/option-item.component.scss
+++ b/src/app/components/question/answer/shared-option-component/option-item/option-item.component.scss
@@ -91,8 +91,7 @@
   font-size: 28px !important;
   width: 28px !important;
   height: 28px !important;
-  color: var(--text-option, #000000) !important;
-  /* USER REQUESTED: Black */
+  color: #000000 !important;
   display: flex !important;
   align-items: center !important;
   justify-content: center !important;
